--- a/coq-proba.opam
+++ b/coq-proba.opam
@@ -12,12 +12,12 @@ synopsis: "A probability theory library for Coq"
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" {>= "8.9.1" & < "8.11~"}
-  "coq-coquelicot" {>= "3.0.2" & <= "3.0.3"}
-  "coq-interval" {>= "3.4.0" & <= "3.4.1"}
-  "coq-stdpp" {(>= "1.2.0" & <= "1.2.1") | (= "dev")}
-  "coq-mathcomp-ssreflect" {= "1.9.0"}
-  "coq-flocq" {= "3.2.0"}
+  "coq" {="8.12.0"}
+  "coq-coquelicot" {>= "3.0.2" & <= "3.1.0"}
+  "coq-interval" {= "4.0.0"}
+  "coq-stdpp" {(>= "1.4.0") | (= "dev")}
+  "coq-mathcomp-ssreflect" {= "1.11.0"}
+  "coq-flocq" {= "3.3.1"}
 ]
 
 tags: [
