--- a/coq-proba.opam
+++ b/coq-proba.opam
@@ -12,7 +12,7 @@ synopsis: "A probability theory library for Coq"
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" {="8.12.0"}
+  "coq" {>="8.11" & <= "8.12.0"}
   "coq-coquelicot" {>= "3.0.2" & <= "3.1.0"}
   "coq-interval" {= "4.0.0"}
   "coq-stdpp" {(>= "1.4.0") | (= "dev")}
