--- a/coq-proba.opam
+++ b/coq-proba.opam
@@ -12,11 +12,11 @@ synopsis: "A probability theory library for Coq"
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" {>="8.11" & <= "8.12.0"}
+  "coq" {>="8.11" & <= "8.13.2"}
   "coq-coquelicot" {>= "3.0.2" & <= "3.1.0"}
-  "coq-interval" {= "4.0.0"}
+  "coq-interval" {>= "4.0.0"}
   "coq-stdpp" {(>= "1.4.0") | (= "dev")}
-  "coq-mathcomp-ssreflect" {= "1.11.0"}
+  "coq-mathcomp-ssreflect" {(= "1.11.0") | (= "1.12.0")}
   "coq-flocq" {= "3.3.1"}
 ]
 
