--- a/coq-proba.opam
+++ b/coq-proba.opam
@@ -12,12 +12,12 @@ synopsis: "A probability theory library for Coq"
 build: [make "-j%{jobs}%"]
 install: [make "install"]
 depends: [
-  "coq" {>="8.13.1" & <= "8.13.2"}
-  "coq-coquelicot" {="3.1.0"}
-  "coq-interval" {="4.3.1"}
-  "coq-stdpp" {="1.5.0"}
-  "coq-mathcomp-ssreflect" {="1.12.0"}
-  "coq-flocq" {="3.3.1"}
+  "coq" {="8.15.2"}
+  "coq-coquelicot" {="3.2.0"}
+  "coq-flocq" {="4.1.0"}
+  "coq-interval" {="4.5.2"}
+  "coq-mathcomp-ssreflect" {="1.15.0"}
+  "coq-stdpp" {="1.8.0"}
 ]
 
 tags: [
